# hy-mt1.5-candle-inference

./: .gitignore  Cargo.toml  README.md  README_ZH.md  infer.py  官方提示词示例.txt
src/: config.rs  main.rs  model.rs  utils.rs
