[package]
name = "ai_translate"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.8.2", features = ["cuda"] }
candle-nn = { version = "0.8.2", features = ["cuda"] }
candle-transformers = "0.8.2"
tokenizers = "0.21.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.5.2"
hf-hub = "0.4.1"
half = "2.4"
cudarc = { version = "0.13.9" }
chrono = "0.4"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3